[package]
name = "using-the-proc"
version = "0.0.0"
edition = "2021"
authors = ["Justin (:flaviusb) Marsh <justin.marsh@flaviusb.net>"]
license = "AGPL-3.0"
homepage = "https://github.com/flaviusb/synless"
repository = "https://github.com/flaviusb/synless"

[lib]

[dependencies]
synless = { path = "../.." }
the-proc = { path = "../the-proc" }
